--- a/apps/demo-coordinatorlayout/build.gradle
+++ b/apps/demo-coordinatorlayout/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.dafay.demo.widgets"
+        applicationId "com.dafay.demo.coordinator.layout"
         minSdk 21
         targetSdk 34
         versionCode 1
