--- a/apps/demo-coordinatorlayout/src/main/AndroidManifest.xml
+++ b/apps/demo-coordinatorlayout/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.Demowidgets"
         tools:targetApi="31">
         <activity
+            android:name=".BasicCoordinatorLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TestOneActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GuideActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
