--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,6 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "demo-widgets"
-include ':app'
+include ':apps:demo-coordinatorlayout'
 
 include ':lib-base'
