--- a/apps/demo-coordinatorlayout/src/main/AndroidManifest.xml
+++ b/apps/demo-coordinatorlayout/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Demowidgets"
         tools:targetApi="31">
         <activity
+            android:name=".CollapsingToolbarActivity"
+            android:exported="false" />
+        <activity
             android:name=".BasicCoordinatorLayoutActivity"
             android:exported="false" />
         <activity
